ai changes
